--- a/about.html
+++ b/about.html
@@ -4,7 +4,8 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" href="Style.css" type="text/css">
-        <link rel="stylesheet" href="Style.css" type="text/css">
+        <link rel="stylesheet" href="about.css" type="text/css">
+        <script src="layout.js"></script>
         <title>About</title>
         <div class="ring">Loading
             <span></span>
@@ -12,7 +13,7 @@
     </head>
     <body>
         <iframe src="nav.html" frameborder="0"></iframe> 
-        <video id="loop_mv" src="https://ba.vod.nexoncdn.co.kr/bg/loop_l_en.mp4" muted="muted" loop="loop" playsinline="" autoplay="autoplay" style="width: 1920px; height: 1080px;"></video>
+        <img src="sacabamtavpis.gif" id="loopmv">
         <iframe src="nav.html" frameborder="0"></iframe>
         <section></section>
     </body>
