--- a/contact.html
+++ b/contact.html
@@ -7,11 +7,14 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="Style.css" type="text/css">
+        <link rel="stylesheet" href="contactStyle.css" type="text/css">
+        <script src="layout.js"></script>
         <div class="ring">Loading
             <span></span>
         </div>
     </head>
+    <iframe src="nav.html" frameborder="0"></iframe>
     <body>
-        <iframe src="nav.html" frameborder="0"></iframe> 
+        <img src="skybg.jpg" class="bg">
     </body>
 </html>
