--- a/display.html
+++ b/display.html
@@ -8,6 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="displaystyle.css" type="text/css">
         <link rel="stylesheet" href="Style.css" type="text/css">
+        <script src="layout.js"></script>
         <iframe src="nav.html" frameborder="0"></iframe>
         <div class="ring">Loading
             <span></span>
