--- a/history.html
+++ b/history.html
@@ -9,12 +9,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="historystyle.css" type="text/css">
         <link rel="stylesheet" href="Style.css" type="text/css">
+        <script src="layout.js"></script>
         <div class="ring">Loading
             <span></span>
         </div>
     </head>
     <body>
-        <img src="Historybg.jpg" class="backg">
+        <img src="Historybg.jpg" class="backg" draggable="false">
         <iframe src="nav.html" frameborder="0"></iframe>
         <div></div>
         <br>
